# HomeWork

./: CMakeLists.txt
LogicSimulator/: LogicSimulator.cpp  LogicSimulator.h
Test/: test_logic_simulator.h  test_main.cpp
TextUI/: TextUI.h  main.cpp
